# g4run

./: .g4perf.cmake  .gitattributes  .gitignore  CMS.fmap  CMS.gdml  CMakeLists.txt  LICENSE  README.md  Table.html  actions.cc  actions.h  csv.txt  csv_to_tables.py  demo.txt  diff.html  field.cc  field.h  geometry.cc  geometry.h  index.html  init.cc  init.h  main.cc  primary.cc  primary.h  script.js  style.css
Data/: demo2.csv  pythia-cache.csv  pythia-cpu.csv  pythia.csv
Data/Table_Reports/: pythia-cpu-diff.csv
Data/Table_Reports/diff-reports/: pythia-cpu-diff.csv
Data/Table_Reports/raw-reports/: cpu-stacks.csv  ibs-fetch.csv
Data/Treemaps/: cpu-kernel.csv  cpu-stacks.csv  faults.csv  load-store.csv  pythia-cpu.csv
Data/Treemaps/Diff-TreeMaps/: baseline-vs-run3opt.csv  baseline-vs-vecgeom.csv  run3opt-vs-vecgeom.csv  (+1 more)
Scripts/: csv_to_table.js  diff-report.js  diff-treemap.js  raw-report.js  scatter-plot.js  sunburst.js  treemap.js
ci/: Jenkinsfile  jenkins.sh
cmake/: FindPythia.cmake
perf/: CMakeLists.txt  L1-dcache.awk  L1-icache.awk  branches.awk  cache.awk  filter.awk  ipc.awk  report.sh  stalls.awk
perf/g4Web/: index.html  script.js
perf/g4web/: README.md  diff-config.js  diff.html  index.html  metrics.html  script.js  style.css
perf/scripts/: L1-diff.awk  L1.awk  cache-diff.awk  cache.awk  core-diff.awk  core.awk  cpu-diff.awk  cpu.awk  csv-diff.sh  flamegraph.pl  flamegraph.sh  perf2csv  perf2treemap  record.sh  report.sh  stackcollapse.pl  summary.sh  treemap-diff.sh  treemap.pl  treemap.sh
perf/treemap/: index.html  treemap.js
(+58 files in other folders)
